You can now press a game-picture and move to the GamePage. The correct stream is not showing atm. Fixed a littlebit of css on MediaWindow. /JOHANDG

--- a/src/css/MediaWindow.css
+++ b/src/css/MediaWindow.css
@@ -1,7 +1,7 @@
 .media-window-holder {
     display: flex;
-    width: 80%;
-    height: 80%;
+    width: 70%;
+    height: 70%;
     justify-content: center;
     align-items: center;
     flex-direction: row;
@@ -15,10 +15,13 @@
 .media-window-media {
     display: flex;
     margin-right: 3%;
-    
+    width: 100%;
+    height: 100%;    
 }
 
 .media-window-chat {
     display: flex;
+    width: 40%;
+    height: 100%;
     
 }
